# photo_info_provider

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
api_unit_test/: Test.cpp  api_unit_test.sln  api_unit_test.vcxproj
deprecated_src/: curl_sender.hpp  fromsomeapi_info_provider.hpp  fromsomeapi_info_provider.vcxproj  imodel.h
deprecated_test/: Test.cpp  api_unit_test.sln  api_unit_test.vcxproj
fromsomeapi_info_provider/: cli_view.cpp  cli_view.h  cli_view.hpp  controller.cpp  controller.h  controller.hpp  curl_sender.cpp  curl_sender.h  curl_sender.hpp  fromsomeapi_info_provider.cpp  fromsomeapi_info_provider.hpp  fromsomeapi_info_provider.sln  fromsomeapi_info_provider.vcxproj  fromsomeapi_info_provider.vcxproj.filters  imodel.h  iview.h  json_parser.hpp  model.cpp  model.h  model.hpp
include/: controller.hpp  curl_sender.hpp  fromsomeapi_info_provider.hpp  imodel.hpp  iview.hpp  main.hpp  model_unsplash.hpp  view_cli.hpp
src/: controller.cpp  controller.hpp  curl_sender.cpp  fromsomeapi_info_provider.cpp  fromsomeapi_info_provider.sln  main.cpp  model_unsplash.cpp  view_cli.cpp
test/: basic.cpp
